namespace SaveSystem
{
    public interface ISaveSystem
    {
        void Save();
        void Load();
    }
}